@@ -1,6 +1,5 @@
 package minicraft.core;
 
-import javax.swing.Timer;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
@@ -14,6 +13,11 @@ import minicraft.saveload.Load;
 import minicraft.screen.LoadingDisplay;
 import minicraft.screen.WorldSelectDisplay;
 
+import com.mashape.unirest.http.HttpResponse;
+import com.mashape.unirest.http.JsonNode;
+import com.mashape.unirest.http.Unirest;
+import com.mashape.unirest.http.exceptions.UnirestException;
+
 import org.jetbrains.annotations.Nullable;
 
 public class Network extends Game {
@@ -22,6 +26,35 @@ public class Network extends Game {
 	private static final Random random = new Random();
 	
 	static boolean autoclient = false; // used in the initScreen method; jumps to multiplayer menu as client
+	
+	private static VersionInfo latestVersion = null;
+	
+	// obviously, this can be null.
+	public static VersionInfo getLatestVersion() { return latestVersion; }
+	
+	
+	public static void findLatestVersion(Action callback) {
+		new Thread(() -> {
+			// fetch the latest version from github
+			if(debug) System.out.println("fetching release list from github...");
+			try {
+				HttpResponse<JsonNode> response = Unirest.get("https://api.github.com/repos/chrisj42/minicraft-plus-revived/releases").asJson();
+				if(response.getStatus() != 200) {
+					System.err.println("version request returned status code "+response.getStatus()+": "+response.getStatusText());
+					System.err.println("response body: "+response.getBody());
+					latestVersion = new VersionInfo(VERSION, "", "");
+				}
+				else {
+					latestVersion = new VersionInfo(response.getBody().getArray().getJSONObject(0));
+				}
+			} catch(UnirestException e) {
+				e.printStackTrace();
+				latestVersion = new VersionInfo(VERSION, "", "");
+			}
+			
+			callback.act(); // finished.
+		}).start();
+	}
 	
 	@Nullable
 	public static Entity getEntity(int eid) {
@@ -123,13 +156,28 @@ public class Network extends Game {
 		// now that that's done, let's turn *this* running JVM into a server:
 		server = new MinicraftServer();
 		
-		Timer t = new Timer(1000, e -> {
+		new Load(WorldSelectDisplay.getWorldName(), server); // load server config
+		
+		if(latestVersion == null) {
+			System.out.println("VERSIONCHECK: Checking for updates...");
+			findLatestVersion(() -> {
+				if(latestVersion.version.compareTo(Game.VERSION) > 0) // link new version
+					System.out.println("VERSIONCHECK: Found newer version: Version " + latestVersion.releaseName + " Available! Download direct from \""+latestVersion.releaseUrl +"\". Can also be found with change log at \"https://www.github.com/chrisj42/minicraft-plus-revived/releases\".");
+				else if(latestVersion.releaseName.length() > 0)
+					System.out.println("VERSIONCHECK: No updates found, you have the latest version.");
+				else
+					System.out.println("VERSIONCHECK: Connection failed, could not check for updates.");
+			});
+		}
+		/*Timer t = new Timer(1000, e -> {
 			// meanwhile... the loading screen is about to initialize the world, if this was started from the command line.
 			
 			/// load up any saved config options for the server.
 			new Load(WorldSelectDisplay.getWorldName(), server);
 		});
 		t.setRepeats(false);
-		t.start();
+		t.start();*/
 	}
+	
+	
 }
